--- a/static/assets/css/style-prefix.css
+++ b/static/assets/css/style-prefix.css
@@ -3207,3 +3207,21 @@ footer {
   }
 
 }
+
+/* Login Logout */
+
+.auth-btn {
+  display: inline-block;
+  padding: 8px 16px;
+  background-color: #007BFF; /* blue */
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-left: 10px;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.auth-btn:hover {
+  background-color: #0056b3;
+}
