--- a/templates/index.html
+++ b/templates/index.html
@@ -164,20 +164,14 @@
 
         <div class="header-top-actions">
 
-          <select name="currency">
+          <div class="header-top-actions">
+            {% if user.is_authenticated %}
+              <a href="{% url 'logout' %}" class="auth-btn">Logout</a>
+            {% else %}
+              <a href="{% url 'login' %}" class="auth-btn">Login</a>
+            {% endif %}
+          </div>
 
-            <option value="usd">USD &dollar;</option>
-            <option value="eur">EUR &euro;</option>
-
-          </select>
-
-          <select name="language">
-
-            <option value="en-US">English</option>
-            <option value="es-ES">Espa&ntilde;ol</option>
-            <option value="fr">Fran&ccedil;ais</option>
-
-          </select>
 
         </div>
 
@@ -268,7 +262,7 @@
 
                 <li class="panel-list-item">
                   <a href="#">
-                    <img src="./assets/images/electronics-banner-1.jpg" alt="headphone collection" width="250"
+                    <img src="{% static "assets/images/electronics-banner-1.jpg" %}" alt="headphone collection" width="250"
                       height="119">
                   </a>
                 </li>
