--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Register | E-Commerce</title>
+
+  <!--
+    - favicon
+  -->
+  <link rel="shortcut icon" href="{% static 'assets/images/logo/favicon.svg' %}"" type="image/x-icon">
+
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
