--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,40 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+<style>
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    min-width: 140px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+    z-index: 1000;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+
+  .dropdown-content a {
+    color: #333;
+    padding: 8px 12px;
+    text-decoration: none;
+    font-size: 14px;
+    display: block;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #f8f8f8;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+</style>
 
 <head>
   <meta charset="UTF-8">
@@ -138,7 +172,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://x.com/N1kh1l_A0" class="social-link" target="_blank">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
@@ -150,7 +184,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/nikhil-ambure-8a41a7248/" class="social-link" target="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -165,16 +199,6 @@
         </div>
 
         <div class="header-top-actions">
-
-          <div class="header-top-actions">
-            {% if user.is_authenticated %}
-              <a href="{% url 'logout' %}" class="auth-btn">Logout</a>
-            {% else %}
-              <a href="{% url 'login' %}" class="auth-btn">Login</a>
-            {% endif %}
-          </div>
-
-
         </div>
 
       </div>
@@ -199,23 +223,39 @@
 
         </div>
 
+
+
+
+        {% comment %} *************Added ---> edit profile , login, logout**************  {% endcomment %}
         <div class="header-user-actions">
 
-          <button class="action-btn">
-            <ion-icon name="person-outline"></ion-icon>
-          </button>
+          <div class="dropdown">
+            <button class="action-btn">
+              <ion-icon name="person-outline"></ion-icon>
+            </button>
+            <div class="dropdown-content">
+              <a href="{% url 'edit-profile' %}">Edit Profile</a>
+              {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}">Logout</a>
+              {% else %}
+                <a href="{% url 'login' %}">Login</a>
+              {% endif %}
+            </div>
+          </div>
 
-          <button class="action-btn">
+          <a href="{% url 'wishlist' %}" class="action-btn">
             <ion-icon name="heart-outline"></ion-icon>
             <span class="count">0</span>
-          </button>
+          </a>
 
-          <button class="action-btn">
+          <a href="{% url 'cart' %}" class="action-btn">
             <ion-icon name="bag-handle-outline"></ion-icon>
             <span class="count">0</span>
-          </button>
+          </a>
 
         </div>
+
+
 
       </div>
 
@@ -730,7 +770,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://x.com/N1kh1l_A0" class="social-link" target="_blank">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
@@ -742,7 +782,7 @@
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/nikhil-ambure-8a41a7248/" class="social-link" target="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
@@ -1538,7 +1578,7 @@
 
 
         {% comment %} 
-        *******************Add Products from backend later*******************
+        *******************Add Products from backend *******************
         {% endcomment %}
 
         <div class="product-box">
@@ -1556,6 +1596,7 @@
               <div class="showcase-wrapper has-scrollbar">
 
                 <div class="showcase-container">
+
 
                   <div class="showcase">
 
@@ -2950,9 +2991,9 @@
               <div class="showcase">
               
                 <div class="showcase-banner">
-                  <img src="{% static "" %}%}./assets/images/products/shorts-1.jpg" alt="Better Basics French Terry Sweatshorts"
+                  <img src="{% static "assets/images/products/shorts-1.jpg" %}" alt="Better Basics French Terry Sweatshorts"
                     class="product-img default" width="300">
-                  <img src="./assets/images/products/shorts-2.jpg" alt="Better Basics French Terry Sweatshorts"
+                  <img src="{% static "assets/images/products/shorts-2.jpg" %}" alt="Better Basics French Terry Sweatshorts"
                     class="product-img hover" width="300">
               
                   <p class="showcase-badge angle black">sale</p>
@@ -3538,13 +3579,13 @@
               </li>
 
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://x.com/N1kh1l_A0" class="footer-nav-link" target="_blank">
                   <ion-icon name="logo-twitter"></ion-icon>
                 </a>
               </li>
 
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://www.linkedin.com/in/nikhil-ambure-8a41a7248/" class="footer-nav-link" target="_blank">
                   <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
               </li>
