--- a/templates/cart.html
+++ b/templates/cart.html
@@ -56,7 +56,7 @@
         <tfoot>
           <tr class="font-bold text-lg border-t">
             <td colspan="2" class="py-4 text-right">Total:</td>
-            <td colspan="2" class="py-4 text-green-700">₹{{ total_price }}</td>
+            <td colspan="2" class="py-4 text-green-700">${{ total_price }}</td>
           </tr>
         </tfoot>
       </table>
