--- a/templates/index.html
+++ b/templates/index.html
@@ -1084,7 +1084,7 @@
 
         <div class="sidebar  has-scrollbar" data-mobile-menu>
 
-          <div class="sidebar-category">
+          {% comment %} <div class="sidebar-category">
 
             <div class="sidebar-top">
               <h2 class="sidebar-title">Category</h2>
@@ -1440,8 +1440,10 @@
               
             </ul>
 
-          </div>
+          </div> {% endcomment %}
+          
 
+          {% comment %} *****Best Sellers******** {% endcomment %}
           <div class="product-showcase">
 
             <h3 class="showcase-heading">best sellers</h3>
@@ -1450,17 +1452,18 @@
 
               <div class="showcase-container">
 
+                {% for product in best_sellers %}
                 <div class="showcase">
 
-                  <a href="#" class="showcase-img-box">
-                    <img src="{% static "assets/images/products/1.jpg" %}" alt="baby fabric shoes" width="75" height="75"
+                  <a href="{% url 'product_detail' product.id %}" class="showcase-img-box">
+                    <img src="{{ product.image.url }}" alt="{{ product.name }}" width="75" height="75"
                       class="showcase-img">
                   </a>
 
                   <div class="showcase-content">
 
-                    <a href="#">
-                      <h4 class="showcase-title">baby fabric shoes</h4>
+                    <a href="{% url 'product_detail' product.id %}">
+                      <h4 class="showcase-title">{{ product.name }}</h4>
                     </a>
 
                     <div class="showcase-rating">
@@ -1472,100 +1475,14 @@
                     </div>
 
                     <div class="price-box">
-                      <del>$5.00</del>
-                      <p class="price">$4.00</p>
+                      <del>${{ product.old_price }}</del>
+                      <p class="price">${{ product.price }}</p>
                     </div>
 
                   </div>
 
                 </div>
-
-                <div class="showcase">
-
-                  <a href="#" class="showcase-img-box">
-                    <img src="{% static "assets/images/products/2.jpg" %}" alt="men's hoodies t-shirt" class="showcase-img"
-                      width="75" height="75">
-                  </a>
-
-                  <div class="showcase-content">
-
-                    <a href="#">
-                      <h4 class="showcase-title">men's hoodies t-shirt</h4>
-                    </a>
-                    <div class="showcase-rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star-half-outline"></ion-icon>
-                    </div>
-
-                    <div class="price-box">
-                      <del>$17.00</del>
-                      <p class="price">$7.00</p>
-                    </div>
-
-                  </div>
-
-                </div>
-
-                <div class="showcase">
-
-                  <a href="#" class="showcase-img-box">
-                    <img src="{% static "assets/images/products/3.jpg" %}" alt="girls t-shirt" class="showcase-img" width="75"
-                      height="75">
-                  </a>
-
-                  <div class="showcase-content">
-
-                    <a href="#">
-                      <h4 class="showcase-title">girls t-shirt</h4>
-                    </a>
-                    <div class="showcase-rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star-half-outline"></ion-icon>
-                    </div>
-
-                    <div class="price-box">
-                      <del>$5.00</del>
-                      <p class="price">$3.00</p>
-                    </div>
-
-                  </div>
-
-                </div>
-
-                <div class="showcase">
-
-                  <a href="#" class="showcase-img-box">
-                    <img src="{% static "assets/images/products/4.jpg" %}" alt="woolen hat for men" class="showcase-img" width="75"
-                      height="75">
-                  </a>
-
-                  <div class="showcase-content">
-
-                    <a href="#">
-                      <h4 class="showcase-title">woolen hat for men</h4>
-                    </a>
-                    <div class="showcase-rating">
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                      <ion-icon name="star"></ion-icon>
-                    </div>
-
-                    <div class="price-box">
-                      <del>$15.00</del>
-                      <p class="price">$12.00</p>
-                    </div>
-
-                  </div>
-
-                </div>
+                {% endfor %}
 
               </div>
 
@@ -1574,12 +1491,6 @@
           </div>
 
         </div>
-
-        
-
-
-
-
 
         {% comment %} 
         *******************Add Products from backend *******************
@@ -1623,9 +1534,9 @@
                       <form method="POST" action="{% url 'add_to_cart' product.id %}" class="mt-3">
                         {% csrf_token %}
                         <button type="submit"
-                          class="bg-[#FA8072] text-black border border-[#FA8072] px-4 py-2 rounded-md 
+                          class="bg-[#FA8072] text-black border border-[#FA8072] px-2 py-1 rounded 
                                 hover:bg-black hover:text-white transition-colors duration-300
-                                text-sm font-semibold">
+                                text-xs font-medium">
                           Add to Cart
                         </button>
                       </form>
@@ -1674,9 +1585,9 @@
                       <form method="POST" action="{% url 'add_to_cart' product.id %}" class="mt-3">
                         {% csrf_token %}
                         <button type="submit"
-                          class="bg-[#FA8072] text-black border border-[#FA8072] px-4 py-2 rounded-md 
+                          class="bg-[#FA8072] text-black border border-[#FA8072] px-2 py-1 rounded 
                                 hover:bg-black hover:text-white transition-colors duration-300
-                                text-sm font-semibold">
+                                text-xs font-medium">
                           Add to Cart
                         </button>
                       </form>
@@ -1726,9 +1637,9 @@
                       <form method="POST" action="{% url 'add_to_cart' product.id %}" class="mt-3">
                         {% csrf_token %}
                         <button type="submit"
-                          class="bg-[#FA8072] text-black border border-[#FA8072] px-4 py-2 rounded-md 
+                          class="bg-[#FA8072] text-black border border-[#FA8072] px-2 py-1 rounded 
                                 hover:bg-black hover:text-white transition-colors duration-300
-                                text-sm font-semibold">
+                                text-xs font-medium">
                           Add to Cart
                         </button>
                       </form>
@@ -1887,14 +1798,6 @@
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
 
-                    <button class="btn-action">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </button>
-
-                    <button class="btn-action">
-                      <ion-icon name="repeat-outline"></ion-icon>
-                    </button>
-
                     <!-- Add to Cart Button wrapped in a form -->
                     <form method="POST" action="{% url 'add_to_cart' product.id %}">
                       {% csrf_token %}
@@ -1934,7 +1837,6 @@
 
               </div>
               {% endfor %}
-
 
             </div>
 
