--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
@@ -5,10 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Edit Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="shortcut icon" href="{% static 'assets/images/logo/favicon.svg' %}" type="image/x-icon">
 </head>
 <body class="min-h-screen bg-pink-50 py-10 font-sans">
 
   <section class="container mx-auto px-4">
+
+    <div class="ml-4 mb-6">
+      <a href="{% url 'index' %}" 
+        class=" inline-flex items-center gap-2 text-base font-medium text-white bg-pink-500 hover:bg-pink-600 px-4 py-2 rounded-full shadow-md transition duration-200">
+        ← Home
+      </a>
+    </div>
+
     <div class="bg-white rounded-2xl shadow-lg p-8 max-w-3xl mx-auto">
       <h2 class="text-3xl font-semibold text-center mb-8 text-gray-800">Edit Profile</h2>
 
